--- a/RNN/ARIMA_And_Seasonal_ARIMA.ipynb
+++ b/RNN/ARIMA_And_Seasonal_ARIMA.ipynb
@@ -6,7 +6,7 @@
       "name": "ARIMA-And-Seasonal-ARIMA.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOygnWTl48u0KSMgFw3B/yx",
+      "authorship_tag": "ABX9TyNp4Fp0zrmn/Kjr/i8XLkzZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -91,7 +91,7 @@
         "import matplotlib.pyplot as plt\r\n",
         "%matplotlib inline"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -111,7 +111,7 @@
       "source": [
         "df=pd.read_csv('https://raw.githubusercontent.com/gauravpks/dl-repo/master/RNN/perrin-freres-monthly-champagne-.csv')"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -122,12 +122,12 @@
           "height": 195
         },
         "id": "4FNqm-K45Vi9",
-        "outputId": "a0db4c7b-244c-4a0d-f7f9-38b304a3a8e1"
+        "outputId": "19e3372f-69f3-4626-cc93-edaa0855c8ac"
       },
       "source": [
         "df.head()"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -197,7 +197,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 60
+          "execution_count": 3
         }
       ]
     },
@@ -209,14 +209,14 @@
           "height": 195
         },
         "id": "nFxcRZB85aS8",
-        "outputId": "be1e4a9a-a68a-4f2e-d087-885e95bed5d4"
+        "outputId": "8e296694-93ae-40c7-d71a-44d2bbc55464"
       },
       "source": [
         "## Cleaning up the data\r\n",
         "df.columns=[\"Month\",\"Sales\"]\r\n",
         "df.head()"
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -286,7 +286,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 61
+          "execution_count": 4
         }
       ]
     },
@@ -298,12 +298,12 @@
           "height": 195
         },
         "id": "iAAyjdyD5nzq",
-        "outputId": "462fac09-1f25-4c31-fb01-c1f18c7bd08e"
+        "outputId": "aa756f6f-0db8-436b-9d17-9b4f674db855"
       },
       "source": [
         "df.tail()"
       ],
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -373,7 +373,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 62
+          "execution_count": 5
         }
       ]
     },
@@ -387,7 +387,7 @@
         "df.drop(106,axis=0,inplace=True)\r\n",
         "df.drop(105,axis=0,inplace=True)"
       ],
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -399,7 +399,7 @@
         "# Convert Month into Datetime\r\n",
         "df['Month']=pd.to_datetime(df['Month'])"
       ],
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -410,7 +410,7 @@
       "source": [
         "df.set_index('Month',inplace=True)"
       ],
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -421,12 +421,12 @@
           "height": 225
         },
         "id": "WdqtdeNR5z_4",
-        "outputId": "907d4219-d8f5-421a-9b84-7f7218a1f22b"
+        "outputId": "e0d92390-953d-4a7d-8d02-41d2e3128f32"
       },
       "source": [
         "df.head()"
       ],
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -495,7 +495,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 66
+          "execution_count": 9
         }
       ]
     },
@@ -507,25 +507,25 @@
           "height": 296
         },
         "id": "Q_nv2OeY58dZ",
-        "outputId": "ec393ad4-ea67-4045-8742-bb05f19dcf0d"
+        "outputId": "1a3b1bb9-897d-4151-a8c2-63803963f9d3"
       },
       "source": [
         "#Visualize the Data\r\n",
         "df.plot()"
       ],
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.axes._subplots.AxesSubplot at 0x7ff40c6a87f0>"
+              "<matplotlib.axes._subplots.AxesSubplot at 0x7ff867e102b0>"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 67
+          "execution_count": 10
         },
         {
           "output_type": "display_data",
@@ -1909,15 +1909,432 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "kdM1Fhj_w9em"
+        "id": "67dyXp8VEMhe"
       },
       "source": [
-        ""
+        "#LTSM"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "3Mx4kuXtEQIm",
+        "outputId": "aff1a85a-a3a2-4d54-b1db-3e16182f8fae",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 431
+        }
+      },
+      "source": [
+        "df"
       ],
-      "execution_count": null,
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Sales</th>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Month</th>\n",
+              "      <th></th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>1964-01-01</th>\n",
+              "      <td>2815.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1964-02-01</th>\n",
+              "      <td>2672.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1964-03-01</th>\n",
+              "      <td>2755.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1964-04-01</th>\n",
+              "      <td>2721.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1964-05-01</th>\n",
+              "      <td>2946.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>...</th>\n",
+              "      <td>...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1972-05-01</th>\n",
+              "      <td>4618.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1972-06-01</th>\n",
+              "      <td>5312.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1972-07-01</th>\n",
+              "      <td>4298.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1972-08-01</th>\n",
+              "      <td>1413.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1972-09-01</th>\n",
+              "      <td>5877.0</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "<p>105 rows × 1 columns</p>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "             Sales\n",
+              "Month             \n",
+              "1964-01-01  2815.0\n",
+              "1964-02-01  2672.0\n",
+              "1964-03-01  2755.0\n",
+              "1964-04-01  2721.0\n",
+              "1964-05-01  2946.0\n",
+              "...            ...\n",
+              "1972-05-01  4618.0\n",
+              "1972-06-01  5312.0\n",
+              "1972-07-01  4298.0\n",
+              "1972-08-01  1413.0\n",
+              "1972-09-01  5877.0\n",
+              "\n",
+              "[105 rows x 1 columns]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 11
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "EsEy1OUGEUET",
+        "outputId": "117d96d7-7b5e-47af-a490-9f479d6f045d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "df.shape"
+      ],
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(105,)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 34
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "RjekCqfCNOmv"
+      },
+      "source": [
+        "df =df.ravel()"
+      ],
+      "execution_count": 30,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "VGXWGqY6GN6P"
+      },
+      "source": [
+        "import numpy as np\r\n",
+        "import matplotlib.pyplot as plt\r\n",
+        "import tensorflow as tf\r\n",
+        "from tensorflow import keras\r\n",
+        "import matplotlib as mpl\r\n"
+      ],
+      "execution_count": 23,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "yOwUUQXnMl11"
+      },
+      "source": [
+        "from sklearn.preprocessing import MinMaxScaler\r\n",
+        "scaler=MinMaxScaler(feature_range=(0,1))\r\n",
+        "df=scaler.fit_transform(np.array(df).reshape(-1,1))"
+      ],
+      "execution_count": 35,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "XgkK5-L3M1Bz"
+      },
+      "source": [
+        "##splitting dataset into train and test split\r\n",
+        "training_size=int(len(df)*0.80)\r\n",
+        "test_size=len(df)-training_size\r\n",
+        "train_data,test_data=df[0:training_size,:],df[training_size:len(df),:1]"
+      ],
+      "execution_count": 36,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Udu7c4nCOUxq",
+        "outputId": "ca6fadaf-436b-4270-9e30-423e041d24e8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "training_size,test_size"
+      ],
+      "execution_count": 38,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(84, 21)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 38
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "qgAXrKJlM9ce",
+        "outputId": "affdf345-d62e-4622-dbdf-60d9afe1fcd0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "train_data.shape"
+      ],
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(84, 1)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 37
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ebIlXDtdOozN"
+      },
+      "source": [
+        "Data Preprocessing"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "8FOrOjXzN6hw"
+      },
+      "source": [
+        "import numpy\r\n",
+        "# convert an array of values into a dataset matrix\r\n",
+        "def create_dataset(dataset, time_step=1):\r\n",
+        "\tdataX, dataY = [], []\r\n",
+        "\tfor i in range(len(dataset)-time_step-1):\r\n",
+        "\t\ta = dataset[i:(i+time_step), 0]   ###i=0, 0,1,2,3-----99   100 \r\n",
+        "\t\tdataX.append(a)\r\n",
+        "\t\tdataY.append(dataset[i + time_step, 0])\r\n",
+        "\treturn numpy.array(dataX), numpy.array(dataY)"
+      ],
+      "execution_count": 39,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "aZNyLH-fPTek"
+      },
+      "source": [
+        "# reshape into X=t,t+1,t+2,t+3 and Y=t+4\r\n",
+        "time_step = 10\r\n",
+        "X_train, y_train = create_dataset(train_data, time_step)\r\n",
+        "X_test, ytest = create_dataset(test_data, time_step)"
+      ],
+      "execution_count": 40,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "1E6NatBGPZJa",
+        "outputId": "7e05c4de-4718-4576-ac97-e87c070c85d7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "print(X_train.shape), print(y_train.shape)"
+      ],
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "(73, 10)\n",
+            "(73,)\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(None, None)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 41
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "sBj9Kt7ePyq8",
+        "outputId": "2e3aab71-4256-47bc-ecff-56fbdd33a8dd",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "print(X_test.shape), print(ytest.shape)"
+      ],
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "(10, 10)\n",
+            "(10,)\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(None, None)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 42
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "vf0PwdIuP3FH"
+      },
+      "source": [
+        "# reshape input to be [samples, time steps, features] which is required for LSTM\r\n",
+        "X_train =X_train.reshape(X_train.shape[0],X_train.shape[1] , 1)\r\n",
+        "X_test = X_test.reshape(X_test.shape[0],X_test.shape[1] , 1)"
+      ],
+      "execution_count": 43,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "VHnN35bPP5Qh",
+        "outputId": "cde9ce53-558a-4722-df59-d477c2d222f7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "print(X_train.shape), print(y_train.shape)"
+      ],
+      "execution_count": 44,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "(73, 10, 1)\n",
+            "(73,)\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(None, None)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 44
+        }
+      ]
     }
   ]
 }
