--- a/RNN/NLP_with_RNN_and_Attention.ipynb
+++ b/RNN/NLP_with_RNN_and_Attention.ipynb
@@ -6,7 +6,7 @@
       "name": "NLP with RNN and Attention.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPcdZWwJpmsR3Dw4Zc/SglN",
+      "authorship_tag": "ABX9TyOXKSTvfeMWSOT0PwnI6JiA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -36,7 +36,7 @@
         "from tensorflow import keras\r\n",
         "assert tf.__version__ >= \"2.0\""
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -47,7 +47,7 @@
       "source": [
         "import numpy as np\r\n"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -102,7 +102,7 @@
         "    print(\"=\" * 5, \"\\nY_batch\")\r\n",
         "    print(Y_batch.numpy())"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -165,7 +165,7 @@
         "with open(filepath) as f:\r\n",
         "    shakespeare_text = f.read()"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -189,7 +189,7 @@
       "source": [
         "print(shakespeare_text)\r\n"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -40212,7 +40212,7 @@
       "source": [
         "print(shakespeare_text[:148])"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -40244,7 +40244,7 @@
       "source": [
         "\"\".join(sorted(set(shakespeare_text.lower())))"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -40272,7 +40272,7 @@
         "tokenizer = keras.preprocessing.text.Tokenizer(char_level=True)\r\n",
         "tokenizer.fit_on_texts(shakespeare_text)"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -40287,7 +40287,7 @@
       "source": [
         "tokenizer.texts_to_sequences([\"First\"])"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -40315,7 +40315,7 @@
       "source": [
         "tokenizer.sequences_to_texts([[20, 6, 9, 8, 3]])"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -40340,7 +40340,7 @@
         "max_id = len(tokenizer.word_index) # number of distinct characters\r\n",
         "dataset_size = tokenizer.document_count # total number of characters"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -40362,7 +40362,7 @@
         "train_size = dataset_size * 90 // 100\r\n",
         "dataset = tf.data.Dataset.from_tensor_slices(encoded[:train_size])"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -40384,7 +40384,7 @@
         "window_length = n_steps + 1 # target = input shifted 1 character ahead\r\n",
         "dataset = dataset.repeat().window(window_length, shift=1, drop_remainder=True)"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -40395,7 +40395,7 @@
       "source": [
         "dataset = dataset.flat_map(lambda window: window.batch(window_length))"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -40407,7 +40407,7 @@
         "np.random.seed(42)\r\n",
         "tf.random.set_seed(42)"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -40420,7 +40420,7 @@
         "dataset = dataset.shuffle(10000).batch(batch_size)\r\n",
         "dataset = dataset.map(lambda windows: (windows[:, :-1], windows[:, 1:]))"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -40432,7 +40432,7 @@
         "dataset = dataset.map(\r\n",
         "    lambda X_batch, Y_batch: (tf.one_hot(X_batch, depth=max_id), Y_batch))"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -40443,7 +40443,7 @@
       "source": [
         "dataset = dataset.prefetch(1)"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -40459,7 +40459,7 @@
         "for X_batch, Y_batch in dataset.take(1):\r\n",
         "    print(X_batch.shape, Y_batch.shape)"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -40521,7 +40521,7 @@
         "history = model.fit(dataset, steps_per_epoch=train_size // batch_size,\r\n",
         "                    epochs=10)"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -40570,7 +40570,7 @@
         "    X = np.array(tokenizer.texts_to_sequences(texts)) - 1\r\n",
         "    return tf.one_hot(X, max_id)"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -40589,7 +40589,7 @@
         "Y_pred = np.argmax(model.predict(X_new), axis=-1)\r\n",
         "tokenizer.sequences_to_texts(Y_pred + 1)[0][-1] # 1st sentence, last char"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -40631,7 +40631,7 @@
         "\r\n",
         "tf.random.categorical([[np.log(0.5), np.log(0.4), np.log(0.1)]], num_samples=40).numpy()"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -40661,7 +40661,7 @@
         "    char_id = tf.random.categorical(rescaled_logits, num_samples=1) + 1\r\n",
         "    return tokenizer.sequences_to_texts(char_id.numpy())[0]"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -40679,7 +40679,7 @@
         "\r\n",
         "next_char(\"How are yo\", temperature=1)"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -40709,7 +40709,7 @@
         "        text += next_char(text, temperature)\r\n",
         "    return text"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -40726,7 +40726,7 @@
         "\r\n",
         "print(complete_text(\"t\", temperature=0.2))"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -40749,7 +40749,7 @@
       "source": [
         "print(complete_text(\"t\", temperature=1))"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -40773,7 +40773,7 @@
       "source": [
         "print(complete_text(\"t\", temperature=2))"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -40784,6 +40784,201 @@
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "GKGs0wAKrIZl"
+      },
+      "source": [
+        ""
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "w191mptCrJ9O"
+      },
+      "source": [
+        "##Stateful RNN"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "EN3vE4nKrJYD"
+      },
+      "source": [
+        "tf.random.set_seed(42)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ajlD5NUmrRzV"
+      },
+      "source": [
+        "dataset = tf.data.Dataset.from_tensor_slices(encoded[:train_size])\r\n",
+        "dataset = dataset.window(window_length, shift=n_steps, drop_remainder=True)\r\n",
+        "dataset = dataset.flat_map(lambda window: window.batch(window_length))\r\n",
+        "dataset = dataset.repeat().batch(1)\r\n",
+        "dataset = dataset.map(lambda windows: (windows[:, :-1], windows[:, 1:]))\r\n",
+        "dataset = dataset.map(\r\n",
+        "    lambda X_batch, Y_batch: (tf.one_hot(X_batch, depth=max_id), Y_batch))\r\n",
+        "dataset = dataset.prefetch(1)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "dirVbsphrTvL"
+      },
+      "source": [
+        "batch_size = 32\r\n",
+        "encoded_parts = np.array_split(encoded[:train_size], batch_size)\r\n",
+        "datasets = []\r\n",
+        "for encoded_part in encoded_parts:\r\n",
+        "    dataset = tf.data.Dataset.from_tensor_slices(encoded_part)\r\n",
+        "    dataset = dataset.window(window_length, shift=n_steps, drop_remainder=True)\r\n",
+        "    dataset = dataset.flat_map(lambda window: window.batch(window_length))\r\n",
+        "    datasets.append(dataset)\r\n",
+        "dataset = tf.data.Dataset.zip(tuple(datasets)).map(lambda *windows: tf.stack(windows))\r\n",
+        "dataset = dataset.repeat().map(lambda windows: (windows[:, :-1], windows[:, 1:]))\r\n",
+        "dataset = dataset.map(\r\n",
+        "    lambda X_batch, Y_batch: (tf.one_hot(X_batch, depth=max_id), Y_batch))\r\n",
+        "dataset = dataset.prefetch(1)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Vqt5-bTNrZoK"
+      },
+      "source": [
+        "Note: once again, I commented out recurrent_dropout=0.2 (compared to the book) so you can get GPU acceleration (if you have one)."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "R4UIuPUzrZ-q"
+      },
+      "source": [
+        "model = keras.models.Sequential([\r\n",
+        "    keras.layers.GRU(128, return_sequences=True, stateful=True,\r\n",
+        "                     #dropout=0.2, recurrent_dropout=0.2,\r\n",
+        "                     dropout=0.2,\r\n",
+        "                     batch_input_shape=[batch_size, None, max_id]),\r\n",
+        "    keras.layers.GRU(128, return_sequences=True, stateful=True,\r\n",
+        "                     #dropout=0.2, recurrent_dropout=0.2),\r\n",
+        "                     dropout=0.2),\r\n",
+        "    keras.layers.TimeDistributed(keras.layers.Dense(max_id,\r\n",
+        "                                                    activation=\"softmax\"))\r\n",
+        "])"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "3emUL27NrfHl"
+      },
+      "source": [
+        "class ResetStatesCallback(keras.callbacks.Callback):\r\n",
+        "    def on_epoch_begin(self, epoch, logs):\r\n",
+        "        self.model.reset_states()"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "071C3TyjrhKd"
+      },
+      "source": [
+        "model.compile(loss=\"sparse_categorical_crossentropy\", optimizer=\"adam\")\r\n",
+        "steps_per_epoch = train_size // batch_size // n_steps\r\n",
+        "history = model.fit(dataset, steps_per_epoch=steps_per_epoch, epochs=50,\r\n",
+        "                    callbacks=[ResetStatesCallback()])"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "jdSfAjEZrme1"
+      },
+      "source": [
+        "To use the model with different batch sizes, we need to create a stateless copy. We can get rid of dropout since it is only used during training:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "gw3r3K-KrmC2"
+      },
+      "source": [
+        "stateless_model = keras.models.Sequential([\r\n",
+        "    keras.layers.GRU(128, return_sequences=True, input_shape=[None, max_id]),\r\n",
+        "    keras.layers.GRU(128, return_sequences=True),\r\n",
+        "    keras.layers.TimeDistributed(keras.layers.Dense(max_id,\r\n",
+        "                                                    activation=\"softmax\"))\r\n",
+        "])"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "rtqPfQ-Arq4x"
+      },
+      "source": [
+        "To set the weights, we first need to build the model (so the weights get created):"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "i6bgHUCtrtPX"
+      },
+      "source": [
+        "stateless_model.build(tf.TensorShape([None, None, max_id]))"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Xd2CA9Y_ruzz"
+      },
+      "source": [
+        "stateless_model.set_weights(model.get_weights())\r\n",
+        "model = stateless_model"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "s-322k1lrwWv"
+      },
+      "source": [
+        "tf.random.set_seed(42)\r\n",
+        "\r\n",
+        "print(complete_text(\"t\"))"
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
